test/disabled/neg/macro-deprecate-dont-touch-backquotedidents.check
macro-deprecate-dont-touch-backquotedidents.scala:37: error: in future versions of Scala "macro" will be a keyword. consider using a different name.
package `macro` {
        ^
macro-deprecate-dont-touch-backquotedidents.scala:38: error: in future versions of Scala "macro" will be a keyword. consider using a different name.
  package `macro`.bar {
          ^
macro-deprecate-dont-touch-backquotedidents.scala:43: error: in future versions of Scala "macro" will be a keyword. consider using a different name.
  package `macro`.foo {
          ^
three errors found
